Fix combo parsing and function names